# insecure-ai-agents

./: .gitignore  README.md  get_patients_fit_for_als_trials.py  get_patients_fit_for_als_trials_with_guardrails.py  pyproject.toml  test_lakera_detectors.py
langgraph/multiagent/: create_patient_db.py  pyproject.toml
langgraph/multiagent/demo/: get_patients_fit_for_als_trials.py
langgraph/multiagent/with_guardrails/: get_patients_fit_for_als_trials_with_haize.py  get_patients_fit_for_als_trials_with_lakera.py  get_patients_fit_for_als_trials_with_pillar.py
mastra/cot-rag-agent/: package-lock.json  package.json
mastra/cot-rag-agent/src/mastra/: index.ts
mastra/cot-rag-agent/src/mastra/agents/: rag-agent.ts
mastra/finbot/: package-lock.json  package.json
mastra/finbot/src/mastra/: index.ts
mastra/finbot/src/mastra/agents/: finbot-agent.ts
mastra/finbot/test_invoices/: invoice1.txt  invoice2.txt  invoice3.txt  invoice4.txt  invoice5.txt  invoice6.txt  invoice7.txt
mastra/gcn-agent/: package-lock.json  package.json
mastra/gcn-agent/src/mastra/: index.ts
mastra/single-agent/: README.md  package-lock.json  package.json
mastra/single-agent/src/mastra/: index.ts
pydantic_ai/: query_patients.py
pydantic_ai/compliance/: changes.html  public_change_log.py  template.md
pydantic_ai/j1-micro/: main.py
pydantic_ai/memory_poisoning/: requirements.txt
pydantic_ai/memory_poisoning/chat_app/: .chat_app_messages.sqlite  chat_app.py
pydantic_ai/sql_injection/: insecure_sql_agent.py  insecure_sql_agent_patched.py  orthopedic_db.py
(+7 files in other folders)
